@@ -6,3 +6,5 @@ copyright_year   = 2012
 
 [@LEONT]
 install_tool = eumm
+[Prereqs / RuntimeRecommends]
+ExtUtils::Config = 0.007
